--- a/hobbies.html
+++ b/hobbies.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <h1>My Hobbies</h1>
     <ol>
@@ -14,4 +15,5 @@
         <li>Playing Sports</li>
     </ol>
 </body>
+
 </html>
