--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Shagun's Personal Site</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -18,7 +16,7 @@
                 <h1>Shagun Goyal</h1>
                 <p><em>B.Tech Student at <strong><a href="https://www.heritageit.edu/">Heritage Institute of
                                 Technology</a></strong></em></p>
-                <p>I am a Frontend Developer and Web Developer Enthusiast</p>
+                <p>I am a Frontend Developer and Web Developer Enthusiast.</p>
             </td>
         </tr>
     </table>
@@ -61,7 +59,7 @@
                         </tr>
                         <tr>
                             <td>C++</td>
-                            <td>⭐⭐⭐</td>
+                            <td>⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>Data Structures</td>
