--- a/Contact-me.html
+++ b/Contact-me.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1>My Contact Details</h1>
-    <p>My Fictional Address: Purana Bazar Dhanbad Jharkhand, India</p>
-    <p>My Phone No: 6201554949</p>
-    <p>My Mail-id: goyalshagun03@gmail.com</a></p>
+    <p>Fictional Address: Purana Bazar, Dhanbad, Jharkhand, India</p>
+    <p>Phone No: 6201554949</p>
+    <p>Mail-id: goyalshagun03@gmail.com</a></p>
     <hr>
     <form action="mailto:goyalshagun03@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
