--- a/hobbies.html
+++ b/hobbies.html
@@ -10,8 +10,8 @@
 <body>
     <h1>My Hobbies</h1>
     <ol>
-        <li>Dancing</li>
-        <li>Drawing and Sketching</li>
+        <li>Writing</li>
+        <li>Sketching</li>
         <li>Playing Sports</li>
     </ol>
 </body>
