--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 <h1>Shagun Goyal</h1>
                 <p><em>B.Tech Student at <strong><a href="https://www.heritageit.edu/">Heritage Institute of
                                 Technology</a></strong></em></p>
-                <p>I am a Frontend Developer and Web Developer Enthusiast.</p>
+                <p>I am a Web Developer Enthusiast.</p>
             </td>
         </tr>
     </table>
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>Pursuing Btech(3rd year) in IT from HITK</li>
+        <li>Pursuing Btech in IT from HITK</li>
         <li>Completed my Higher Secondary Education from RSVM(CBSE) Dhanbad in 2018</li>
     </ul>
     <hr>
@@ -85,7 +85,7 @@
                         </tr>
                         <tr>
                             <td>CSS</td>
-                            <td>⭐⭐⭐⭐</td>
+                            <td>⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>JavaScript</td>
@@ -129,7 +129,7 @@
                         </tr>
                         <tr>
                             <td>DBMS</td>
-                            <td>⭐⭐⭐</td>
+                            <td>⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>SQL</td>
